update jmx